--- a/app/composer.json
+++ b/app/composer.json
@@ -6,10 +6,14 @@
         "src/"
     ],
     "require": {
-        "monolog/monolog": "^2.9"
+        "monolog/monolog": "^2.9",
+        "zircote/swagger-php": "^4.11",
+        "doctrine/annotations": "^2.0",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
-        "symfony/var-dumper": "^5.4"
+        "symfony/var-dumper": "^5.4",
+        "rector/rector": "^1.2"
     }
 }
