--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ events {
 http {
     server {
         listen 80;
+        server_name native_api;
 
         root /var/www/html/public;
         index index.php index.html;
