--- a/app/composer.json
+++ b/app/composer.json
@@ -9,7 +9,8 @@
         "monolog/monolog": "^2.9",
         "zircote/swagger-php": "^4.11",
         "doctrine/annotations": "^2.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
