--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: php_web
     depends_on:
       - db
+      - redis
     volumes:
       - ./app:/var/www/html # mount local "app" folder to container
       - ./php.ini:/usr/local/etc/php/php.ini
@@ -17,6 +18,9 @@ services:
       - webnet
     extra_hosts:
       - "host.docker.internal:host-gateway" # Needed for Xdebug
+    environment:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
 
   db:
     image: mysql:5.7
@@ -54,6 +58,15 @@ services:
       - ./app:/var/www/html
     ports:
       - "8081:80"
+    networks:
+      - webnet
+
+  redis:
+    image: redis:alpine
+    container_name: redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
     networks:
       - webnet
 
